Error with limiting sample selection: fix from type annotation to proper dict type annotation

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -529,8 +529,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-21T17:33:05.752112Z",
-     "start_time": "2025-07-21T17:33:05.538505Z"
+     "end_time": "2025-07-21T17:34:19.819939Z",
+     "start_time": "2025-07-21T17:34:19.712530Z"
     }
    },
    "cell_type": "code",
@@ -539,7 +539,9 @@
     "full_df = pd.read_csv(dataset_csv_path).drop_duplicates(subset=\"pmid\").reset_index(drop=True)\n",
     "\n",
     "# Choose how many cases to sample\n",
-    "N = 10\n",
+    "# N = 10\n",
+    "# Don’t ask for more than exist\n",
+    "N = min(N, len(full_df))\n",
     "subset_df = full_df.sample(n=N, random_state=42).reset_index(drop=True)\n",
     "\n",
     "print(f\"Sampling {N} PMIDs:\", subset_df[\"pmid\"].tolist())\n",
@@ -558,7 +560,7 @@
     "        text_cache = pickle.load(f)\n",
     "    print(f\"Loaded text cache with {len(text_cache)} entries\")\n",
     "else:\n",
-    "    text_cache: {}\n",
+    "    text_cache = {}\n",
     "    print(\"Initialized empty text cache\")\n",
     "\n",
     "def load_clinical_pdf(pdf_path: str) -> str:\n",
@@ -614,21 +616,27 @@
    "id": "231c1c375a6ec410",
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Cannot take a larger sample than population when 'replace=False'",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sampling 4 PMIDs: ['PMID_29283439', 'PMID_24998929', 'PMID_22305531', 'PMID_23665959']\n",
+      "Initialized empty text cache\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'text_cache' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mValueError\u001B[39m                                Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[106]\u001B[39m\u001B[32m, line 6\u001B[39m\n\u001B[32m      4\u001B[39m \u001B[38;5;66;03m# Choose how many cases to sample\u001B[39;00m\n\u001B[32m      5\u001B[39m N = \u001B[32m10\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m6\u001B[39m subset_df = \u001B[43mfull_df\u001B[49m\u001B[43m.\u001B[49m\u001B[43msample\u001B[49m\u001B[43m(\u001B[49m\u001B[43mn\u001B[49m\u001B[43m=\u001B[49m\u001B[43mN\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mrandom_state\u001B[49m\u001B[43m=\u001B[49m\u001B[32;43m42\u001B[39;49m\u001B[43m)\u001B[49m.reset_index(drop=\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[32m      8\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mSampling \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mN\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m PMIDs:\u001B[39m\u001B[33m\"\u001B[39m, subset_df[\u001B[33m\"\u001B[39m\u001B[33mpmid\u001B[39m\u001B[33m\"\u001B[39m].tolist())\n\u001B[32m     11\u001B[39m \u001B[38;5;66;03m# Setup conversion for input material to LLM-compatible txt now\u001B[39;00m\n\u001B[32m     12\u001B[39m \n\u001B[32m     13\u001B[39m \u001B[38;5;66;03m# Initialize converter once\u001B[39;00m\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~/miniconda3/envs/p5/lib/python3.13/site-packages/pandas/core/generic.py:6118\u001B[39m, in \u001B[36mNDFrame.sample\u001B[39m\u001B[34m(self, n, frac, replace, weights, random_state, axis, ignore_index)\u001B[39m\n\u001B[32m   6115\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m weights \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[32m   6116\u001B[39m     weights = sample.preprocess_weights(\u001B[38;5;28mself\u001B[39m, weights, axis)\n\u001B[32m-> \u001B[39m\u001B[32m6118\u001B[39m sampled_indices = \u001B[43msample\u001B[49m\u001B[43m.\u001B[49m\u001B[43msample\u001B[49m\u001B[43m(\u001B[49m\u001B[43mobj_len\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msize\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mreplace\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mweights\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mrs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m   6119\u001B[39m result = \u001B[38;5;28mself\u001B[39m.take(sampled_indices, axis=axis)\n\u001B[32m   6121\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m ignore_index:\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~/miniconda3/envs/p5/lib/python3.13/site-packages/pandas/core/sample.py:152\u001B[39m, in \u001B[36msample\u001B[39m\u001B[34m(obj_len, size, replace, weights, random_state)\u001B[39m\n\u001B[32m    149\u001B[39m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[32m    150\u001B[39m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\u001B[33m\"\u001B[39m\u001B[33mInvalid weights: weights sum to zero\u001B[39m\u001B[33m\"\u001B[39m)\n\u001B[32m--> \u001B[39m\u001B[32m152\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mrandom_state\u001B[49m\u001B[43m.\u001B[49m\u001B[43mchoice\u001B[49m\u001B[43m(\u001B[49m\u001B[43mobj_len\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msize\u001B[49m\u001B[43m=\u001B[49m\u001B[43msize\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mreplace\u001B[49m\u001B[43m=\u001B[49m\u001B[43mreplace\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mp\u001B[49m\u001B[43m=\u001B[49m\u001B[43mweights\u001B[49m\u001B[43m)\u001B[49m.astype(\n\u001B[32m    153\u001B[39m     np.intp, copy=\u001B[38;5;28;01mFalse\u001B[39;00m\n\u001B[32m    154\u001B[39m )\n",
-      "\u001B[36mFile \u001B[39m\u001B[32mnumpy/random/mtrand.pyx:1020\u001B[39m, in \u001B[36mnumpy.random.mtrand.RandomState.choice\u001B[39m\u001B[34m()\u001B[39m\n",
-      "\u001B[31mValueError\u001B[39m: Cannot take a larger sample than population when 'replace=False'"
+      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[107]\u001B[39m\u001B[32m, line 63\u001B[39m\n\u001B[32m     61\u001B[39m \u001B[38;5;66;03m# Convert all PDFs in our sampled subset\u001B[39;00m\n\u001B[32m     62\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m pdf_path \u001B[38;5;129;01min\u001B[39;00m subset_df[\u001B[33m\"\u001B[39m\u001B[33minput\u001B[39m\u001B[33m\"\u001B[39m]:\n\u001B[32m---> \u001B[39m\u001B[32m63\u001B[39m     pdf_text = \u001B[43mload_clinical_pdf\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpdf_path\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     64\u001B[39m \u001B[38;5;66;03m# Persist updated cache to disk\u001B[39;00m\n\u001B[32m     65\u001B[39m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mopen\u001B[39m(text_cache_path, \u001B[33m\"\u001B[39m\u001B[33mwb\u001B[39m\u001B[33m\"\u001B[39m) \u001B[38;5;28;01mas\u001B[39;00m f:\n",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[107]\u001B[39m\u001B[32m, line 36\u001B[39m, in \u001B[36mload_clinical_pdf\u001B[39m\u001B[34m(pdf_path)\u001B[39m\n\u001B[32m     30\u001B[39m \u001B[38;5;250m\u001B[39m\u001B[33;03m\"\"\"\u001B[39;00m\n\u001B[32m     31\u001B[39m \u001B[33;03mConvert .txt or .pdf file at \"pdf_path\" into a plain text string.\u001B[39;00m\n\u001B[32m     32\u001B[39m \u001B[33;03mUse the in-memory cache first; write new text back to the cache only when the cache is explicitly saved at the end of the pipeline.\u001B[39;00m\n\u001B[32m     33\u001B[39m \u001B[33;03mRaise FileNotFoundError or ConversionError if the file does not exist.\u001B[39;00m\n\u001B[32m     34\u001B[39m \u001B[33;03m\"\"\"\u001B[39;00m\n\u001B[32m     35\u001B[39m \u001B[38;5;66;03m# Return cache if it exists in memory\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m36\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m pdf_path \u001B[38;5;129;01min\u001B[39;00m \u001B[43mtext_cache\u001B[49m:\n\u001B[32m     37\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m text_cache[pdf_path]\n\u001B[32m     39\u001B[39m \u001B[38;5;66;03m# Ensure the files exists before we continue\u001B[39;00m\n",
+      "\u001B[31mNameError\u001B[39m: name 'text_cache' is not defined"
      ]
     }
    ],
-   "execution_count": 106
+   "execution_count": 107
   },
   {
    "metadata": {},
