Error with limiting sample selection: fix from type annotation to proper dict type annotation. Fix some comments

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -529,8 +529,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-21T17:34:19.819939Z",
-     "start_time": "2025-07-21T17:34:19.712530Z"
+     "end_time": "2025-07-21T17:37:03.491929Z",
+     "start_time": "2025-07-21T17:35:54.919503Z"
     }
    },
    "cell_type": "code",
@@ -624,19 +624,62 @@
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'text_cache' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[107]\u001B[39m\u001B[32m, line 63\u001B[39m\n\u001B[32m     61\u001B[39m \u001B[38;5;66;03m# Convert all PDFs in our sampled subset\u001B[39;00m\n\u001B[32m     62\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m pdf_path \u001B[38;5;129;01min\u001B[39;00m subset_df[\u001B[33m\"\u001B[39m\u001B[33minput\u001B[39m\u001B[33m\"\u001B[39m]:\n\u001B[32m---> \u001B[39m\u001B[32m63\u001B[39m     pdf_text = \u001B[43mload_clinical_pdf\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpdf_path\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     64\u001B[39m \u001B[38;5;66;03m# Persist updated cache to disk\u001B[39;00m\n\u001B[32m     65\u001B[39m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mopen\u001B[39m(text_cache_path, \u001B[33m\"\u001B[39m\u001B[33mwb\u001B[39m\u001B[33m\"\u001B[39m) \u001B[38;5;28;01mas\u001B[39;00m f:\n",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[107]\u001B[39m\u001B[32m, line 36\u001B[39m, in \u001B[36mload_clinical_pdf\u001B[39m\u001B[34m(pdf_path)\u001B[39m\n\u001B[32m     30\u001B[39m \u001B[38;5;250m\u001B[39m\u001B[33;03m\"\"\"\u001B[39;00m\n\u001B[32m     31\u001B[39m \u001B[33;03mConvert .txt or .pdf file at \"pdf_path\" into a plain text string.\u001B[39;00m\n\u001B[32m     32\u001B[39m \u001B[33;03mUse the in-memory cache first; write new text back to the cache only when the cache is explicitly saved at the end of the pipeline.\u001B[39;00m\n\u001B[32m     33\u001B[39m \u001B[33;03mRaise FileNotFoundError or ConversionError if the file does not exist.\u001B[39;00m\n\u001B[32m     34\u001B[39m \u001B[33;03m\"\"\"\u001B[39;00m\n\u001B[32m     35\u001B[39m \u001B[38;5;66;03m# Return cache if it exists in memory\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m36\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m pdf_path \u001B[38;5;129;01min\u001B[39;00m \u001B[43mtext_cache\u001B[49m:\n\u001B[32m     37\u001B[39m     \u001B[38;5;28;01mreturn\u001B[39;00m text_cache[pdf_path]\n\u001B[32m     39\u001B[39m \u001B[38;5;66;03m# Ensure the files exists before we continue\u001B[39;00m\n",
-      "\u001B[31mNameError\u001B[39m: name 'text_cache' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "Parameter `strict_text` has been deprecated and will be ignored.\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "Parameter `strict_text` has been deprecated and will be ignored.\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "Parameter `strict_text` has been deprecated and will be ignored.\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "/Users/varenya/miniconda3/envs/p5/lib/python3.13/site-packages/torch/utils/data/dataloader.py:683: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n",
+      "Parameter `strict_text` has been deprecated and will be ignored.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved text cache now with 4 entries\n",
+      "hello3\n",
+      "PDF inputs folder:               /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store/pmid_pdfs\n",
+      "Ground truth folder:             /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/phenopacket_store/notebooks\n",
+      "Dataset CSV path:                /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/src/P5/scripts/data/tmp/PMID_PDF_Phenopacket_list_in_phenopacket_store.csv\n",
+      "Experimentally generated files:  /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data\n",
+      "LLM outputs folder:              /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/llm_output_dir\n",
+      "Validated JSONs folder:          /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/experimental-data/validated_jsons\n",
+      "Evaluation report path:          /Users/varenya/Desktop/Illini+Uni/Personalized_Genomic_Medicine-Precision_Genomics_Laboratory/PreGen/P5/reports/first_report.json\n"
      ]
     }
    ],
-   "execution_count": 107
+   "execution_count": 108
   },
   {
    "metadata": {},
@@ -657,7 +700,12 @@
   {
    "cell_type": "code",
    "id": "235eaff7-4f21-4a21-81bf-e97236ca26d1",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-21T17:43:37.647338Z",
+     "start_time": "2025-07-21T17:43:37.624695Z"
+    }
+   },
    "source": [
     "# Iterate over rows, should lookup only once\n",
     "list_input_texts    = []\n",
@@ -670,14 +718,14 @@
     "    pdf_path   = case.input\n",
     "    truth_path = case.truth\n",
     "\n",
-    "    Convert PDF to text\n",
+    "    # Convert PDF to text\n",
     "    try:\n",
     "        clinical_text = load_clinical_pdf(pdf_path)\n",
     "    except (ConversionError, PdfiumError) as e:\n",
     "        skipped_pdfs.append({\"pmid\": pmid_value, \"pdf\": pdf_path, \"reason\": f\"conversion error: {e}\"})\n",
     "        continue\n",
     "\n",
-    "    Load raw JSON and validate with ignore_unknown_fields\n",
+    "    # Load raw JSON and validate with ignore_unknown_fields\n",
     "    try:\n",
     "        raw_true_packet = json.load(open(truth_path, \"r\", encoding=\"utf-8\"))\n",
     "        proto = ProtoPhenopacket()\n",
@@ -686,7 +734,7 @@
     "        skipped_pdfs.append({\"pmid\": pmid_value, \"truth\": truth_path, \"reason\": f\"schema parse error: {e}\"})\n",
     "        continue\n",
     "\n",
-    "    Wrap in util Phenopacket to ensure phenotypicFeatures exists\n",
+    "    # Wrap in util Phenopacket to ensure phenotypicFeatures exists\n",
     "    try:\n",
     "        truth_packet = Phenopacket(raw_true_packet)\n",
     "    except InvalidPhenopacketError as e:\n",
@@ -708,8 +756,21 @@
     "\n",
     "print(\"hello4\")  # print hello 4 as a sanity check\n"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 6 new cases, skipped 0 so far\n",
+      "Loaded 7 new cases, skipped 0 so far\n",
+      "Loaded 8 new cases, skipped 0 so far\n",
+      "Loaded 9 new cases, skipped 0 so far\n",
+      "Loaded 4 clinical texts and 4 ground-truth packets for 4 unique patients\n",
+      "hello4\n"
+     ]
+    }
+   ],
+   "execution_count": 110
   },
   {
    "metadata": {},
