Build a strict system+user conversation

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -783,7 +783,12 @@
    "id": "a5f9ab5a0c5a064d"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-21T17:43:52.276781Z",
+     "start_time": "2025-07-21T17:43:52.272096Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# 1) Prompt for just HPO labels\n",
@@ -870,7 +875,7 @@
    ],
    "id": "6f5d51a89657db88",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 111
   },
   {
    "metadata": {},
@@ -883,7 +888,12 @@
    "id": "8f03843785823cdc"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-21T17:51:46.255981Z",
+     "start_time": "2025-07-21T17:51:35.004624Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# pick out the first patient/example\n",
@@ -892,19 +902,26 @@
     "# truth_packet    = list_truth_packets[0]\n",
     "\n",
     "# 1) Inference: ask for *only* the JSON array of HPO term objects for the first clinical PDF\n",
-    "hpo_response = chat(\n",
-    "    model=\"llama3.2:latest\",\n",
-    "    messages=[{\n",
-    "        \"role\": \"user\",\n",
+    "# build a strict system+user conversation\n",
+    "messages = [\n",
+    "    {\n",
+    "        \"role\": \"system\",\n",
     "        \"content\": (\n",
     "            hpo_prompt\n",
-    "            + \"\\n\\n*Extract only the JSON array of **valid** HPO term objects for patient `{}`,*\\n\"\n",
-    "            + \"*each with `hpo_id`, `hpo_label` and `descriptor`, and nothing else.*\\n\\n\"\n",
-    "            .format(patient_id)\n",
-    "            + clinical_text\n",
-    "            + \"\\n\\n[EOS]\"\n",
+    "            + \"\\n\\nYour only output must be a **valid** JSON array of  HPO term objects\"\n",
+    "            + \"with fields 'hpo_id','hpo_label','excerpt',\"\n",
+    "            + \"'onset_id','severity_id','frequency_id', and nothing else.\"\n",
     "        )\n",
-    "    }],\n",
+    "    },\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": clinical_text\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "hpo_response = chat(\n",
+    "    model=\"llama3.2:latest\",\n",
+    "    messages=messages,\n",
     "    options={\"--hidethinking\": True}\n",
     ")\n",
     "\n",
@@ -914,24 +931,73 @@
     "print(raw_hpo_output[:300], \"...\\n\")\n",
     "\n",
     "# 3) Slice out the JSON array\n",
-    "start_idx       = raw_hpo_output.find(\"[\")\n",
-    "end_idx         = raw_hpo_output.rfind(\"]\")\n",
+    "start = raw_hpo_output.find(\"[\")\n",
+    "end = raw_hpo_output.rfind(\"]\")\n",
     "if start_idx < 0 or end_idx < 0:\n",
+    "    # print the raw output to debug what the model actually sent\n",
+    "    print(\"===== RAW HPO OUTPUT =====\\n\", raw_hpo_output)\n",
     "    raise RuntimeError(f\"Could not locate a JSON array in HPO output for patient {patient_id}:\\n{raw_hpo_output}\")\n",
-    "hpo_json_array  = raw_hpo_output[start_idx : end_idx+1]\n",
+    "# grab *only* the array text\n",
+    "hpo_json_array = raw_hpo_output[start : end+1]\n",
     "\n",
     "# Parse and validate\n",
     "try:\n",
     "    hpo_terms = Phenopacket(json.loads(raw_hpo_output))\n",
     "    print(f\"Parsed {len(hpo_terms)} HPO term(s) for patient {patient_id}\")\n",
     "except JSONDecodeError as error:\n",
-    "    raise ValueError(f\"Failed to parse HPO JSON for patient {patient_id}: {e}\\nRaw output:\\n{raw_hpo_output}\")\n",
+    "    raise ValueError(f\"Failed to parse HPO JSON array {hpo_json_array} for patient {patient_id}: {e}\\nRaw output:\\n{raw_hpo_output}\")\n",
     "\n",
     "print(\"hello5\")  # print hello 5 as a sanity check"
    ],
    "id": "1f547b47f98fc0b3",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw LLM output (truncated to the first ~300 chars or so):\n",
+      "This is a long and complex text that appears to be a scientific article or a chapter from a book on genetics and molecular biology. The text discusses various topics related to paroxysmal nocturnal hemoglobinuria (PNH), a rare blood disorder, as well as other conditions such as hyperphosphatasia men ...\n",
+      "\n",
+      "===== RAW HPO OUTPUT =====\n",
+      " This is a long and complex text that appears to be a scientific article or a chapter from a book on genetics and molecular biology. The text discusses various topics related to paroxysmal nocturnal hemoglobinuria (PNH), a rare blood disorder, as well as other conditions such as hyperphosphatasia mental retardation syndrome.\n",
+      "\n",
+      "Here is a brief summary of the main points:\n",
+      "\n",
+      "1. PNH is caused by mutations in the PIG-A gene, which leads to the absence or dysfunction of GPI-anchored proteins on red blood cells.\n",
+      "2. The text discusses various studies that have identified different types of mutations in the PIG-A gene and their effects on PNH.\n",
+      "3. Another condition mentioned is hyperphosphatasia mental retardation syndrome, which is caused by mutations in the PIGN gene.\n",
+      "4. Researchers have used a variety of techniques to study the genetics of these conditions, including whole-exome sequencing and genetic editing.\n",
+      "5. The text also discusses the role of GPI-anchored proteins in other cellular processes, such as cell adhesion and signaling.\n",
+      "\n",
+      "Overall, this text appears to be a comprehensive review of recent research on PNH and hyperphosphatasia mental retardation syndrome, with a focus on the genetics and molecular biology of these conditions.\n",
+      "\n",
+      "As for the specific questions you asked:\n",
+      "\n",
+      "* What is PNH?\n",
+      "PNH is a rare blood disorder that occurs when the body's immune system attacks red blood cells.\n",
+      "* What causes PNH?\n",
+      "PNH is caused by mutations in the PIG-A gene, which leads to the absence or dysfunction of GPI-anchored proteins on red blood cells.\n",
+      "* How are these mutations identified?\n",
+      "These mutations are typically identified through whole-exome sequencing, a technique that involves sequencing all the protein-coding regions of the genome.\n",
+      "* What are the consequences of these mutations?\n",
+      "The mutations can lead to a range of symptoms, including anemia, fatigue, and increased risk of infections.\n",
+      "\n",
+      "Please note that this is just a brief summary, and there may be additional information or details not included in this response.\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Could not locate a JSON array in HPO output for patient IV-4:\nThis is a long and complex text that appears to be a scientific article or a chapter from a book on genetics and molecular biology. The text discusses various topics related to paroxysmal nocturnal hemoglobinuria (PNH), a rare blood disorder, as well as other conditions such as hyperphosphatasia mental retardation syndrome.\n\nHere is a brief summary of the main points:\n\n1. PNH is caused by mutations in the PIG-A gene, which leads to the absence or dysfunction of GPI-anchored proteins on red blood cells.\n2. The text discusses various studies that have identified different types of mutations in the PIG-A gene and their effects on PNH.\n3. Another condition mentioned is hyperphosphatasia mental retardation syndrome, which is caused by mutations in the PIGN gene.\n4. Researchers have used a variety of techniques to study the genetics of these conditions, including whole-exome sequencing and genetic editing.\n5. The text also discusses the role of GPI-anchored proteins in other cellular processes, such as cell adhesion and signaling.\n\nOverall, this text appears to be a comprehensive review of recent research on PNH and hyperphosphatasia mental retardation syndrome, with a focus on the genetics and molecular biology of these conditions.\n\nAs for the specific questions you asked:\n\n* What is PNH?\nPNH is a rare blood disorder that occurs when the body's immune system attacks red blood cells.\n* What causes PNH?\nPNH is caused by mutations in the PIG-A gene, which leads to the absence or dysfunction of GPI-anchored proteins on red blood cells.\n* How are these mutations identified?\nThese mutations are typically identified through whole-exome sequencing, a technique that involves sequencing all the protein-coding regions of the genome.\n* What are the consequences of these mutations?\nThe mutations can lead to a range of symptoms, including anemia, fatigue, and increased risk of infections.\n\nPlease note that this is just a brief summary, and there may be additional information or details not included in this response.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mRuntimeError\u001B[39m                              Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[113]\u001B[39m\u001B[32m, line 41\u001B[39m\n\u001B[32m     38\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m start_idx < \u001B[32m0\u001B[39m \u001B[38;5;129;01mor\u001B[39;00m end_idx < \u001B[32m0\u001B[39m:\n\u001B[32m     39\u001B[39m     \u001B[38;5;66;03m# print the raw output to debug what the model actually sent\u001B[39;00m\n\u001B[32m     40\u001B[39m     \u001B[38;5;28mprint\u001B[39m(\u001B[33m\"\u001B[39m\u001B[33m===== RAW HPO OUTPUT =====\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[33m\"\u001B[39m, raw_hpo_output)\n\u001B[32m---> \u001B[39m\u001B[32m41\u001B[39m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mRuntimeError\u001B[39;00m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mCould not locate a JSON array in HPO output for patient \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mpatient_id\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m:\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;132;01m{\u001B[39;00mraw_hpo_output\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m)\n\u001B[32m     42\u001B[39m \u001B[38;5;66;03m# grab *only* the array text\u001B[39;00m\n\u001B[32m     43\u001B[39m hpo_json_array = raw_hpo_output[start : end+\u001B[32m1\u001B[39m]\n",
+      "\u001B[31mRuntimeError\u001B[39m: Could not locate a JSON array in HPO output for patient IV-4:\nThis is a long and complex text that appears to be a scientific article or a chapter from a book on genetics and molecular biology. The text discusses various topics related to paroxysmal nocturnal hemoglobinuria (PNH), a rare blood disorder, as well as other conditions such as hyperphosphatasia mental retardation syndrome.\n\nHere is a brief summary of the main points:\n\n1. PNH is caused by mutations in the PIG-A gene, which leads to the absence or dysfunction of GPI-anchored proteins on red blood cells.\n2. The text discusses various studies that have identified different types of mutations in the PIG-A gene and their effects on PNH.\n3. Another condition mentioned is hyperphosphatasia mental retardation syndrome, which is caused by mutations in the PIGN gene.\n4. Researchers have used a variety of techniques to study the genetics of these conditions, including whole-exome sequencing and genetic editing.\n5. The text also discusses the role of GPI-anchored proteins in other cellular processes, such as cell adhesion and signaling.\n\nOverall, this text appears to be a comprehensive review of recent research on PNH and hyperphosphatasia mental retardation syndrome, with a focus on the genetics and molecular biology of these conditions.\n\nAs for the specific questions you asked:\n\n* What is PNH?\nPNH is a rare blood disorder that occurs when the body's immune system attacks red blood cells.\n* What causes PNH?\nPNH is caused by mutations in the PIG-A gene, which leads to the absence or dysfunction of GPI-anchored proteins on red blood cells.\n* How are these mutations identified?\nThese mutations are typically identified through whole-exome sequencing, a technique that involves sequencing all the protein-coding regions of the genome.\n* What are the consequences of these mutations?\nThe mutations can lead to a range of symptoms, including anemia, fatigue, and increased risk of infections.\n\nPlease note that this is just a brief summary, and there may be additional information or details not included in this response."
+     ]
+    }
+   ],
+   "execution_count": 113
   },
   {
    "metadata": {},
